--- a/app/src/main/res/layout/activity_walmart_pickup_base.xml
+++ b/app/src/main/res/layout/activity_walmart_pickup_base.xml
@@ -52,8 +52,9 @@
                     android:orientation="horizontal">
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_weight="1"
                         android:orientation="vertical">
 
                         <TextView
@@ -69,11 +70,31 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="center_vertical|right"
+                            android:layout_marginLeft="@dimen/margin_10"
+                            android:gravity="center_vertical"
                             android:text="Grocery"
                             android:textColor="@android:color/white"
                             android:textSize="@dimen/textSize_12" />
                     </LinearLayout>
+
+
+                    <ImageView
+                        android:id="@+id/ivCart"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/ic_action_cart" />
+
+                    <TextView
+                        android:id="@+id/tvCartCount"
+                        android:layout_width="@dimen/margin_20"
+                        android:layout_height="@dimen/margin_20"
+                        android:layout_marginLeft="-10dip"
+                        android:layout_marginRight="@dimen/margin_10"
+                        android:layout_marginTop="5dip"
+                        android:background="@drawable/image_circle"
+                        android:gravity="center"
+                        android:textColor="@android:color/black" />
                 </LinearLayout>
             </android.support.v7.widget.Toolbar>
 
